--- a/src/System/Add_Movie_dash.form
+++ b/src/System/Add_Movie_dash.form
@@ -1324,7 +1324,7 @@
         <Component class="javax.swing.JLabel" name="jLabel21">
           <Properties>
             <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="0" green="0" red="cc" type="rgb"/>
+              <Color blue="cc" green="cc" red="cc" type="rgb"/>
             </Property>
             <Property name="text" type="java.lang.String" value="Always Fetch Rating for Accurate Results*"/>
           </Properties>
